infra/ ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitcoinsolar-backend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: api.bitcoinsolar.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitcoinsolar-backend
                port:
                  number: 80
